--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,6 +54,12 @@
                     </svg>
                     <span>Groups</span>
                 </button>
+                <button id="courtManagementTabBtn" class="tab-btn w-full" title="Courts">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path fill="#FFB74D" d="M20 6H4V4h16v2zm0 14H4V8h16v12zM6 10h2v2H6v-2zm0 4h2v2H6v-2zm0 4h2v2H6v-2zm4-8h2v2h-2v-2zm0 4h2v2h-2v-2zm0 4h2v2h-2v-2zm4-8h2v2h-2v-2zm0 4h2v2h-2v-2z"/>
+                    </svg>
+                    <span>Courts</span>
+                </button>
                 <button id="scheduleManagementTabBtn" class="tab-btn w-full" title="Schedules">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path fill="#E57373" d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10z"/>
@@ -241,11 +247,6 @@
                         <div id="createScheduleCourtsInput" class="flex flex-col gap-2">
                             <!-- Court checkboxes will be loaded from DB by app.js -->
                         </div>
-                        <label for="createScheduleGameTypeSelect" class="text-gray-700 font-medium">Game Type:</label>
-                        <select id="createScheduleGameTypeSelect" class="input-field">
-                            <option value=0>Singles</option>
-                            <option value=1>Doubles</option>
-                        </select>
                         <label for="createScheduleIsRecurringSelect" class="flex items-center gap-2 mt-2">
                             <input type="checkbox" id="createScheduleIsRecurringSelect"> Make this a recurring schedule
                         </label>
@@ -295,11 +296,6 @@
                         <div id="editScheduleCourtsInput" class="flex flex-col gap-2">
                             <!-- Court checkboxes will be loaded from DB by app.js -->
                         </div>
-                        <label for="editScheduleGameTypeSelect" class="text-gray-700 font-medium">Game Type:</label>
-                        <select id="editScheduleGameTypeSelect" class="input-field">
-                            <option value=0>Singles</option>
-                            <option value=1>Doubles</option>
-                        </select>
                         <label for="editIsRecurring" class="flex items-center gap-2 mt-2">
                             <input type="checkbox" id="editIsRecurring"> Make this a recurring schedule
                         </label>
@@ -349,16 +345,19 @@
                         <div id="groupsList" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mb-4">
                             <!-- Groups will be rendered here -->
                         </div>
-                        <h2 class="text-xl font-semibold text-gray-700 mb-2 mt-6">Courts for Selected Group</h2>
-                        <div id="courtsList" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mb-4">
-                            <!-- Courts will be rendered here by app.js -->
-                        </div>
                     </div>
                 </div>
                 <!-- Player Management Tab Content -->
                 <div id="playerManagementTabContent" class="tab-content hidden">
                     <div class="card">
                         <div id="allPlayersGrid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mb-4">
+                        </div>
+                    </div>
+                </div>
+                <!-- Court Management Tab Content -->
+                <div id="courtManagementTabContent" class="tab-content hidden">
+                    <div class="card">
+                        <div id="courtsList" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mb-4">
                         </div>
                     </div>
                 </div>
