--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,11 +41,13 @@
 
         <div class="container mx-auto p-4 relative">
             <h1 class="text-3xl font-bold text-gray-800 text-center mb-4">My Tennis Team</h1>
-            <button id="logoutBtn" title="Logout" class="btn-icon-only absolute top-4 right-4 z-10">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
-                </svg>
-            </button>
+            <div id="user-actions-container" class="absolute top-4 right-4 z-10 flex items-center gap-2">
+                <button id="logoutBtn" title="Logout" class="btn-icon-only">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
+                    </svg>
+                </button>
+            </div>
             <h2 id="currentGroupNameDisplay" class="text-xl font-semibold text-gray-600 text-center -mt-2 mb-4"></h2>
             <div class="tab-nav flex flex-col sm:flex-row w-full">
                 <button id="groupManagementTabBtn" class="tab-btn active w-full" title="Groups">
