--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,22 +30,7 @@
         </div>
     </div>
 
-    <!-- Contact Support Modal -->
-    <div id="contactSupportModalOverlay" class="modal-overlay">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3 class="text-lg font-semibold">Contact Support</h3>
-                <button id="closeContactSupportModal" class="modal-close-btn">&times;</button>
-            </div>
-            <div class="modal-body">
-                <p class="mb-4">Please describe the issue you are experiencing. Your current group information will be sent along with your message if applicable.</p>
-                <textarea id="supportMessageTextarea" class="w-full p-2 border rounded" rows="6" placeholder="Enter your message here..."></textarea>
-            </div>
-            <div class="modal-footer">
-                <button id="submitSupportRequestBtn" class="btn btn-primary">Submit</button>
-            </div>
-        </div>
-    </div>
+
 
     <div id="mainContainer" class="hidden" style="display: none;">
         <div id="loadingOverlay" class="loading-overlay hidden">
@@ -58,7 +43,7 @@
 
         <div class="container mx-auto p-4 relative">
             <h1 class="text-3xl font-bold text-gray-800 text-center mb-4">My Tennis Team</h1>
-            <div id="user-actions-container" class="absolute top-4 right-4 z-10 flex items-center gap-2">
+            <div id="user-actions-container" class="absolute top-4 right-4 z-10 flex items-center gap-2 backdrop-blur-sm p-2 rounded-full shadow-md">
                 <button id="contactSupportBtn" title="Contact Support" class="btn-icon-only">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
@@ -67,6 +52,11 @@
                 <button id="logoutBtn" title="Logout" class="btn-icon-only">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
+                    </svg>
+                </button>
+                <button id="deleteAccountBtn" title="Delete Account" class="btn-icon-only text-red-500 hover:text-red-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-4v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                     </svg>
                 </button>
             </div>
@@ -111,6 +101,24 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Contact Support Modal -->
+            <div id="contactSupportModalOverlay" class="modal-overlay">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="text-lg font-semibold">Contact Support</h3>
+                        <button id="closeContactSupportModal" class="modal-close-btn">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="mb-4">Please describe the issue you are experiencing. Your current group information will be sent along with your message if applicable.</p>
+                        <textarea id="supportMessageTextarea" class="w-full p-2 border rounded" rows="6" placeholder="Enter your message here..."></textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="submitSupportRequestBtn" class="btn btn-primary">Submit</button>
+                    </div>
+                </div>
+            </div>
+
             <!-- Edit Group Modal -->
             <div id="editGroupModalOverlay" class="modal-overlay">
                 <div class="modal-content w-full max-w-md">
