FE minor UI changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -106,8 +106,7 @@
                         </div>
                         <div id="scheduleDetailsContainer" class="card lg:col-span-2 hidden">
                             <div class="flex flex-col flex-grow">
-                                <h2 class="text-xl font-semibold text-gray-700 mb-2">Current <span
-                                        id="currentDayDisplay"></span> Lineup <span id="recurrenceInfoContainer">(<span
+                                <h2 class="text-xl font-semibold text-gray-700 mb-2">Current Lineup <span id="recurrenceInfoContainer">(<span
                                             id="recurrenceTypeDisplay">Week</span>
                                         <span id="currentNum">1</span>)</span></h2>
                                 <div id="playingPlayersContainer" class="grid grid-cols-1 md:grid-cols-2 gap-2">
@@ -311,6 +310,7 @@
             <div class="modal-content w-full max-w-4xl">
                 <h3 class="text-xl font-semibold text-gray-800 text-center mb-4">Stats for <span
                         id="statsScheduleName"></span></h3>
+                <h4 class="text-xl font-semibold text-gray-800 text-center mb-4"><span id="scheduleCurrentDayDisplay"></span></h4>
                 <div id="scheduleStatsContainer" class="overflow-x-auto">
                     <table class="min-w-full bg-white border-collapse rounded-lg">
                         <thead>
